09/29 01:52pm: Created boilerplate, tuned Dijkstra's
